--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "description": "",
+  "type": "module",
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^22.5.5",
@@ -19,6 +20,7 @@
     "typescript": "^5.6.2"
   },
   "dependencies": {
+    "@octokit/webhooks": "^13.3.0",
     "dotenv": "^16.4.5",
     "env-var": "^7.5.0",
     "express": "^4.21.0"
